Cambios en edit mantenimiento y creación del componente informe e informe equipo, aún no terminados

--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -38,9 +38,18 @@
             </li>
           </ul>
         </section>
-        <a class="nav-link">
-          Informes
-        </a>
+
+        <section class="nav-group">
+          <input id="informe" type="checkbox">
+          <label for="informe">Informes</label>
+          <ul class="nav-list">
+            <li>
+              <a routerLink="./informes/informe-equipo"
+                 class="nav-link" routerLinkActive="active">Equipos
+              </a>
+            </li>
+          </ul>
+        </section>
       </section>
     </nav>
   </div>
