Corrección de errores en las fechas y cuando se guardan los cambios realizados

--- a/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/add-orden-trabajo/add-orden-trabajo.component.html
@@ -257,7 +257,7 @@
       <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
       <clr-dg-cell>
         <a class="btn btn-sm btn-warning"
-                (click)="eliminarRepuesto(repuesto)">
+                (click)="eliminarRepuesto(repuesto, true)">
           Eliminar
         </a>
         <a type="button" class="btn btn-sm btn-secondary"
