Errores corregidos en la vista y en la funcionalidad

--- a/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
+++ b/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
@@ -100,7 +100,7 @@
       <div class="col-xs-2">
         <clr-date-container>
           <input type="date" clrDate name="fechaInicio" [(ngModel)]="fechaInicio"
-                 min="2000-01-01" max="2030-12-31">
+                 min="2000-01-01" max="2030-12-31" required>
         </clr-date-container>
       </div>
     </div>
@@ -111,7 +111,7 @@
       <div class="col-xs-2">
         <clr-date-container>
           <input type="date" clrDate name="fechaFin" [(ngModel)]="fechaFin"
-                 min="2000-01-01" max="2030-12-31">
+                 min="2000-01-01" max="2030-12-31" required>
         </clr-date-container>
       </div>
     </div>
