--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -101,7 +101,7 @@
       <div class="col-xs-2">
         <clr-date-container>
           <input type="date" clrDate name="fechaInicio" [(ngModel)]="fechaInicio"
-                 min="2000-01-01" max="2030-12-31">
+                 min="2000-01-01" max="2030-12-31" required>
         </clr-date-container>
       </div>
     </div>
@@ -112,7 +112,7 @@
       <div class="col-xs-2">
         <clr-date-container>
           <input type="date" clrDate name="fechaFin" [(ngModel)]="fechaFin"
-                 min="2000-01-01" max="2030-12-31">
+                 min="2000-01-01" max="2030-12-31" required>
         </clr-date-container>
       </div>
     </div>
