--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
@@ -47,8 +47,8 @@
         <label class="form-orden-trabajo-label">Fecha:</label>
       </div>
       <clr-date-container>
-        <input type="date" clrDate name="fecha" [(ngModel)]="fechaRealizacion"
-               min="2000-01-01" max="2030-12-31">
+      <input type="date" clrDate name="fechaInstalacion" [(ngModel)]="fechaRealizacion"
+             min="2000-01-01" max="2030-12-31" tabindex="10">
       </clr-date-container>
     </div>
     <br>
@@ -77,16 +77,16 @@
   <h4 class="form-orden-trabajo-sub-title">Información del Equipo</h4>
   <section class="form-block">
     <!-- errors -->
-    <div class="alert alert-danger" *ngIf="equipoError">
+    <div class="alert alert-warning" *ngIf="equipoWarning">
       <div class="alert-items">
         <div class="alert-item static">
           <div class="alert-icon-wrapper">
             <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
           </div>
-          <span class="alert-text">{{equipoErrorMessage}}</span>
+          <span class="alert-text">{{equipoWarningMessage}}</span>
         </div>
       </div>
-      <button type="button" class="close" aria-label="Close" (click)="equipoError = false">
+      <button type="button" class="close" aria-label="Close" (click)="equipoWarning = false">
         <clr-icon aria-hidden="true" shape="close"></clr-icon>
       </button>
     </div>
@@ -103,7 +103,13 @@
                (keyup)="onKeyNroSerie(nroSerie.value)"
                [(ngModel)]="numeroSerie">
       </div>
-      <div class="col-xs-2"></div>
+      <div class="col-xs-1" *ngIf="equipoSuccess">
+        <clr-icon shape="check-circle alert-icon alert-success"></clr-icon>
+      </div>
+      <div class="col-xs-1" *ngIf="equipoWarning">
+        <clr-icon shape="warning-standard alert-icon alert-warning"></clr-icon>
+      </div>
+      <div class="col-xs-1"></div>
       <div class="col-xs-2 col-label-equipo">
         <label class="form-orden-trabajo-label" for="numeroPatrimonial">N. Patrimonial:</label>
       </div>
@@ -113,6 +119,12 @@
                (keyup.enter)="onEnterNroPatrimonial(nroPatrimonial.value)"
                (keyup)="onKeyNroPatrimonial(nroPatrimonial.value)"
                [(ngModel)]="numeroPatrimonial">
+      </div>
+      <div class="col-xs-1" *ngIf="equipoSuccess">
+        <clr-icon shape="check-circle alert-icon alert-success"></clr-icon>
+      </div>
+      <div class="col-xs-1" *ngIf="equipoWarning">
+        <clr-icon shape="warning-standard alert-icon alert-warning"></clr-icon>
       </div>
     </div>
 
@@ -203,16 +215,27 @@
       <div class="col-xs-2">
         <label class="form-orden-trabajo-label">Solicitud Repuesto:</label>
       </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="codigoRep"
-               name="solicitudRepId" #solRepId
-               [(ngModel)]="solicitudRepId">
-      </div>
-      <div class="col-xs-1 col-btn-buscar-solicitud">
-        <a class="btn btn-sm btn-success"
-                (click)="buscarSolicitudRepuestoById()">
-          <clr-icon shape="search"></clr-icon>
-        </a>
+<!--      <div class="col-xs-2">-->
+<!--        <input class="form-control" id="codigoRep"-->
+<!--               name="solicitudRepId" #solRepId-->
+<!--               [(ngModel)]="solicitudRepId">-->
+<!--      </div>-->
+<!--      <div class="col-xs-1 col-btn-buscar-solicitud">-->
+<!--        <a class="btn btn-sm btn-success"-->
+<!--                (click)="buscarSolicitudRepuestoById()">-->
+<!--          <clr-icon shape="search"></clr-icon>-->
+<!--        </a>-->
+<!--      </div>-->
+      <div class="col-xs-3">
+        <div class="select form-control">
+          <select clrSelect name="representante" [(ngModel)]="solicitudRepId"
+                  (ngModelChange)="onSelectedSolicitudRepuesto()">
+            <option>Seleccionar Solicitud</option>
+            <option *ngFor="let solicitud of solicitudRepuestoPendientes"
+                    value={{solicitud.id}}>{{solicitud.id}}
+            </option>
+          </select>
+        </div>
       </div>
     </div>
   </section>
