Correccion de errores al atender una orden de trabajo y editar los servicios a una ordend e trabajo finalizada

--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-mantenimiento/edit-mantenimiento.component.html
@@ -1,4 +1,4 @@
-<h2 class="form-mantenimiento-title">Atender Orden de Trabajo</h2>
+<h2 class="form-mantenimiento-title">Editar Servicios Realizados a Orden de Trabajo Finalizada</h2>
 <form class="compact" #mantenimientoForm="ngForm">
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
@@ -96,7 +96,7 @@
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-3">
-        <label class="form-mantenimiento-label" for="informeNro">Informa Nro:</label>
+        <label class="form-mantenimiento-label" for="informeNro">Informe Nro:</label>
       </div>
       <div class="col-xs-3">
         <input class="form-control" id="informeNro"
