--- a/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo-atendidas/lista-orden-trabajo-atendidas.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo-atendidas/lista-orden-trabajo-atendidas.component.html
@@ -1,5 +1,5 @@
 <form class="clr-form clr-form-compact">
-  <h2 class="form-orden-trabajo-title">Orden de Trabajo</h2>
+  <h2 class="form-orden-trabajo-title">Orden de Trabajo Atendida</h2>
   <br>
   <!--info action-->
   <div class="alert alert-info alert-sm" *ngIf="info">
