--- a/client-app/src/app/home/mantenimiento/orden-trabajo/atender-orden-trabajo/atender-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/atender-orden-trabajo/atender-orden-trabajo.component.html
@@ -96,7 +96,7 @@
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-3">
-        <label class="form-mantenimiento-label" for="informeNro">Informa Nro:</label>
+        <label class="form-mantenimiento-label" for="informeNro">Informe Nro:</label>
       </div>
       <div class="col-xs-3">
         <input class="form-control" id="informeNro"
