Se agrega la lista de repuestos y las acciones que pueden realizarse sobre el mismo

--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -22,6 +22,11 @@
           <label for="mantenimiento">Mantenimiento</label>
           <ul class="nav-list">
             <li>
+              <a (click)="irPaginaRepuesto()"
+                 class="nav-link" routerLinkActive="active">Repuestos
+              </a>
+            </li>
+            <li>
               <a (click)="irPaginaSolicitudRepuesto()"
                  class="nav-link" routerLinkActive="active">Solicitud Repuestos
               </a>
